unpackaged/main/default/objects/Bonus_Coupon__c/Bonus_Coupon__c.object-meta.xml
<CustomObject>
    <label>Bonus Coupon</label>
    <nameField>
        <displayFormat>BC-{0000000000}</displayFormat>
        <label>Coupon ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bonus Coupons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>