unpackaged/main/default/objects/Bonus_Coupon__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bonus Coupons</relationshipLabel>
    <relationshipName>Bonus_Coupons</relationshipName>
    <type>Lookup</type>
</CustomField>