unpackaged/main/default/objects/Bonus_Coupon__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bonus Coupons</relationshipLabel>
    <relationshipName>Bonus_Coupons</relationshipName>
    <type>Lookup</type>
</CustomField>