unpackaged/main/default/objects/Bonus_Coupon__c/fields/Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Address__c</fullName>
    <description>Populate contact email address selected for the bonus offer. "Test Only"</description>
    <label>Contact Email Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>