unpackaged/main/default/objects/Bonus_Coupon__c/fields/Correspondientes__c.field-meta.xml
<CustomField>
    <fullName>Correspondientes__c</fullName>
    <description>Bonificaciones correspondientes al mes de...</description>
    <inlineHelpText>Bonificaciones correspondientes al mes de...</inlineHelpText>
    <label>Correspondientes al mes de</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enero</fullName>
            </value>
            <value>
                <fullName>Febrero</fullName>
            </value>
            <value>
                <fullName>Marzo</fullName>
            </value>
            <value>
                <fullName>Abril</fullName>
            </value>
            <value>
                <fullName>Mayo</fullName>
            </value>
            <value>
                <fullName>Junio</fullName>
            </value>
            <value>
                <fullName>Julio</fullName>
            </value>
            <value>
                <fullName>Agosto</fullName>
            </value>
            <value>
                <fullName>Septiembre</fullName>
            </value>
            <value>
                <fullName>Octubre</fullName>
            </value>
            <value>
                <fullName>Noviembre</fullName>
            </value>
            <value>
                <fullName>Diciembre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>