unpackaged/main/default/objects/Bonus_Coupon__c/fields/Coupon_Code__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Code__c</fullName>
    <defaultValue>IF(1 = 2, 
LEFT(TEXT(FLOOR(SQRT((value(
      (left(right(text(now()),6),2))&amp;     
      text(DAY(DATEVALUE(now())))&amp;
      text(Month(DATEVALUE(now())))&amp;
      text(Year(DATEVALUE(now())))&amp;
      (left(right(text(now()),9),2)))
)*100))
),3)
&amp;
UPPER(MID(CASE(MOD( TODAY() - DATE(1900, 1, 6), 7), 0, "Saturday", 1, "Sunday", 2,"Monday", 3, "Tuesday", 4, "Wednesday", 5, "Thursday", 6,"Friday",""),2,3))
,"")</defaultValue>
    <description>This field will automatically be generated</description>
    <inlineHelpText>This field will automatically be generated</inlineHelpText>
    <label>Coupon Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>