unpackaged/main/default/objects/Bonus_Coupon__c/fields/Coupon_Formula__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Formula__c</fullName>
    <formula>Name &amp; " ($" &amp;  TEXT(Amount__c)  &amp; ") expires " &amp; TEXT(Redemption_End_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coupon Formula</label>
    <type>Text</type>
</CustomField>