unpackaged/main/default/objects/Bonus_Coupon__c/fields/Date_Time_Redeemed__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Redeemed__c</fullName>
    <label>Date Time Redeemed</label>
    <type>DateTime</type>
</CustomField>