unpackaged/main/default/objects/Bonus_Coupon__c/fields/gvc_Reported_Wholesaler__c.field-meta.xml
<CustomField>
    <fullName>gvc_Reported_Wholesaler__c</fullName>
    <label>Reported Wholesaler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>