unpackaged/main/default/objects/Bonus_Coupon__c/fields/Redemption_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Redemption Start Date</label>
    <type>Date</type>
</CustomField>