unpackaged/main/default/objects/Bonus_Coupon__c/fields/Wholesaler_Email__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Email__c</fullName>
    <label>Wholesaler Email</label>
    <type>Email</type>
</CustomField>