unpackaged/main/default/objects/Bonus_Coupon__c/fields/Wholesaler_Name__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Name__c</fullName>
    <formula>Wholesaler_Redeemed__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wholesaler_Name</label>
    <type>Text</type>
</CustomField>