unpackaged/main/default/objects/Bonus_Coupon__c/fields/Wholesaler_Notified__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wholesaler Notified</label>
    <type>Checkbox</type>
</CustomField>