unpackaged/main/default/objects/Bonus_Coupon__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountName__c</columns>
    <columns>Pin__c</columns>
    <columns>Coupon_Code__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Correspondientes__c</columns>
    <columns>Redemption_Start_Date__c</columns>
    <columns>Redemption_End_Date__c</columns>
    <columns>Date_Redeemed__c</columns>
    <columns>Wholesaler_Redeemed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>